update to push to pebble on a timer

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>StockPebble</name>
 	<comment></comment>
 	<projects>
+		<project>PEBBLE_KIT</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
